--- a/src/l10n/vi.json
+++ b/src/l10n/vi.json
@@ -126,6 +126,13 @@
       "description": "Bạn đã hủy đơn hàng thành công. 80% số tiền sẽ được hoàn lại vào tài khoản của bạn"
     },
     "goBackButtonText": "OK"
+  },
+
+  "alert":{
+    "warning":"Thông báo",
+    "string_emty":"Vui lòng không để trống",
+    "numberPhone_emty":"Không để chống số điện thoại",
+    "address_emty":"Vui lòng nhập địa chỉ"
   }
  
 }
