call api add room

--- a/src/l10n/en.json
+++ b/src/l10n/en.json
@@ -35,6 +35,12 @@
     "cancel": "Cancel",
     "continue": "Continue"
   },
+  "addRoom":{
+    "RoomAcreage":"Room Acreage",
+    "Description":"Description",
+    "TypeRoom":"Type room",
+    "SelectTypeOfRoom":"Select type of room"
+  },
   "booking": {
     "title": "Booking History",
     "onGoing": "On Going",
